members who have taken sessions paymentplan can book sessions with trainers